# liveandlearn

./: .gitattributes  LICENSE  README.md  init.sh
all/: .gitignore
all/ffmpeg_wrapper/: CMakeLists.txt  README.md  generate_ffmpeg_osx.sh  generate_ffmpeg_vs.sh  generate_ffmpeg_vs_win32.sh  generate_ios_project.sh  generate_macos_command_line_project.sh  generate_macos_project.sh  generate_qt_osx_project.sh  generate_qt_vs_project.bat  generate_qt_vs_project_x86.sh  generate_vs2015_app_project.bat  generate_vs2015_mfc_project.bat  generate_vs2015_project.bat  generate_vs2019_app_project.bat  generate_vs2019_mfc_project.bat  generate_vs2019_project.bat  generate_vs2022_app_project.bat  generate_vs2022_mfc_project.bat  generate_vs2022_project.bat  generate_vs_app_project.sh
all/ffmpeg_wrapper/android/ffmpeg_wrapper/: CMakeLists.txt  dummy.cc
all/ffmpeg_wrapper/apps/ffmpeg_wrapper_app/android/: settings.gradle
all/ffmpeg_wrapper/cmake/: ffmpeg_wrapper.cmake
all/ffmpeg_wrapper/examples/ffmpeg_wrapper_example/: CMakeLists.txt  ffmpeg_wrapper_example.cc
all/ffmpeg_wrapper/ffmpeg/: cmdutils.c  ffmpeg.c  ffmpeg.h  fopen_utf8.h
all/ffmpeg_wrapper/ffmpeg/win/: config.h
all/ffmpeg_wrapper/include/ffmpeg_wrapper/: ffmpeg_wrapper.h  ffmpeg_wrapper_export.h  video_converter.h  video_info_capture.h
all/ffmpeg_wrapper/include/ffmpeg_wrapper/utils/: ffmpeg_wrapper_utils.h
all/ffmpeg_wrapper/src/: base_video_converter.cc  base_video_converter.h  ffmpeg_util.cc  ffmpeg_util.h  ffmpeg_video_converter.cc  ffmpeg_video_converter.h  ffmpeg_wrapper.cc  video_converter.cc  video_info_capture.cc
all/ffmpeg_wrapper/src/tests/: demuxing_decoding.c  demuxing_decoding.h  hello_world.c  hello_world.h
all/ffmpeg_wrapper/src/utils/: ffmpeg_wrapper_utils.cc
all/ffmpeg_wrapper/transcoder/: .gitignore  CMakeLists.txt  README.md  generate_qt_osx_project.sh  generate_qt_vs_project.bat  generate_qt_vs_project_x86.sh  package_qt_osx.sh  package_qt_win_x64.sh  package_qt_win_x86.sh
all/ffmpeg_wrapper/transcoder/transcoder_app/: CMakeLists.txt  main.cc
all/ffmpeg_wrapper/transcoder/transcoder_base/: CMakeLists.txt
all/ffmpeg_wrapper/transcoder/transcoder_client/: CMakeLists.txt  client_ipc_service.cc  client_ipc_service.h  server_driver.cc  server_driver.h  transcoder_client.cc  transcoder_client_frame.cc  transcoder_client_frame.h  transcoder_client_frame.ui  transcoder_video_info_dialog.cc  transcoder_video_info_dialog.h  transcoder_video_info_dialog.ui  transcoder_video_select_dialog.cc  transcoder_video_select_dialog.h  transcoder_video_select_dialog.ui  video_info_capture.cc  video_info_capture.h
all/ffmpeg_wrapper/transcoder/transcoder_server/: CMakeLists.txt  README.md  fake_progress_task.cc  fake_progress_task.h  server_ipc_service.cc  server_ipc_service.h  server_ipc_service_c.h  transcoder_server.cc  transcoder_server_frame.cc  transcoder_server_frame.h  transcoder_server_frame.ui
all/meta_build/: .gitignore  .gn  BUILD.gn  gn_mac.sh  gn_vs.sh
all/meta_build/gn/: BUILDCONFIG.gn
all/meta_build/tutorial/: BUILD.gn  tutorial.cc
all/opencv_wrapper/: .gitignore  CMakeLists.txt  generate_ios_project.sh  generate_macos_command_line_project.sh  generate_macos_project.sh  generate_qt_osx_project.sh  generate_qt_vs_project.bat  generate_vs2022_app_project.bat  generate_vs2022_mfc_project.bat  generate_vs2022_project.bat  generate_vs_mfc_project.sh
all/opencv_wrapper/android/opencv_wrapper/: CMakeLists.txt  build.gradle  dummy.cc
all/opencv_wrapper/cmake/: opencv_wrapper.cmake
all/opencv_wrapper/examples/opencv_wrapper_example/: CMakeLists.txt  opencv_wrapper_example.cc
all/opencv_wrapper/include/opencv_wrapper/: opencv_wrapper.h  opencv_wrapper_export.h
all/opencv_wrapper/resources/: example.mov
all/opencv_wrapper/src/: opencv_wrapper.cc
all/opencv_wrapper/src/utils/: opencv_wrapper_utils.cc
all/sharedlib/template/: .gitignore  CMakeLists.txt  generate_ios_project.sh  generate_macos_command_line_project.sh  generate_macos_project.sh  generate_qt_osx_project.sh  generate_qt_vs_project.bat  generate_vs2015_app_project.bat  generate_vs2015_mfc_project.bat  generate_vs2015_project.bat  generate_vs2019_app_project.bat  generate_vs2019_mfc_project.bat  generate_vs2019_project.bat  generate_vs2022_app_project.bat  generate_vs2022_mfc_project.bat  generate_vs2022_project.bat  generate_vs_project.sh
all/sharedlib/template/cmake/: sharedlib_name.cmake
all/sharedlib/template/src/: sharedlib_name.cc
bash/: date.md  (+3 more)
cef/cef/: CMakeLists.txt  cmake_vs.bat  cmake_vs.sh  cmake_xcode.sh
cef/cef/cef_demo/: CMakeLists.txt  cef_demo.cc
chromium/ui_demo/: BUILD.gn  hello_skia.cc  hello_skia.h  ui_demo.cc
qt/fun_qt/fun_qt_base/: CMakeLists.txt
qt/local_socket/localfortuneserver/: CMakeLists.txt  generate_qt_vs_project.bat  local_fortune_server.sln  main.cc  server.cc  server.h
qt/mac/qmacnativewidget/: CMakeLists.txt  cmake_xcode.sh  main.mm
qt/qdbus_app/: CMakeLists.txt  generate_qt_osx_project.sh  generate_qt_vs_project.sh
qt/qdbus_app/qdbus_client/: .gitignore  CMakeLists.txt  README.md  generate_qt_osx_project.sh  generate_qt_vs_project.bat
qt/qdbus_app/qdbus_client/qdbus_client_app/: CMakeLists.txt  controller.cc  controller.h  main.cc  qdbus_client_frame.cc  qdbus_client_frame.h  qdbus_client_frame.ui
qt/qdbus_app/qdbus_server/: .gitignore  CMakeLists.txt  generate_qt_osx_project.sh  generate_qt_vs_project.bat
qt/qdbus_app/qdbus_server/qdbus_server_app/: CMakeLists.txt  car.cc  car.h  main.cc  qdbus_server_frame.cc  qdbus_server_frame.h  qdbus_server_frame.ui
qt/qt_child_window/: .gitignore  CMakeLists.txt  README.md  generate_qt_osx_project.sh  generate_qt_vs_project.bat  package_qt_osx_x64.sh  package_qt_win_x64.sh
qt/qt_child_window/qt_child_window_app/: CMakeLists.txt  main.cc  qt_child_window_frame.cc  qt_child_window_frame.h  qt_child_window_frame.ui  qt_window_util.cc  qt_window_util.h  qt_window_util.mm
qt/qt_child_window/qt_child_window_app/windows/: qt_child_window_app.rc  resource.h
qt/qt_child_window/qt_child_window_base/: CMakeLists.txt
(+436 files in other folders)
